--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
   <nav>
     <ul>
-      <li><%= link_to "אודות",   about_path %></li>
-      <li><%= link_to "צור קשר", contact_path %></li>
+      <li><%= link_to t(:about),   about_path %></li>
+      <li><%= link_to t(:contact), contact_path %></li>
     </ul>
   </nav>
 </footer>
