Added session for users. Started working on sprinklers.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,7 @@
 <footer class="footer">
+  <small>
+  	<%= t(:watering_team) %>
+  </small>
   <nav>
     <ul>
       <li><%= link_to t(:about),   about_path %></li>
