--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,14 @@
 
 /* mixins, variables, etc. */
 
+/*
+$dir: left;
+$opdir: right; 
+*/
+
+$dir: right; /* rtl */
+$opdir: left; /* rtl */
+
 $grayMediumLight: #eaeaea;
 
 /* universal */
@@ -11,7 +19,7 @@ html {
 }
 
 body {
-  padding-top: 60px; direction:rtl;
+  padding-top: 60px;
 }
 
 section {
@@ -60,7 +68,7 @@ p {
 /* header */
 
 #logo {
-  float: left;
+  float: $dir;
   margin-right: 10px;
   font-size: 1.7em;
   color: white;
@@ -89,13 +97,13 @@ footer {
     }
   }  
   small { 
-    float: left; 
+    float: $dir; 
   }
   ul {
-    float: right;
+    float: $opdir;
     list-style: none;
     li {
-      float: left;
+      float: $dir;
       margin-left: 10px;
     }
   }
@@ -113,9 +121,22 @@ $grayMediumLight: #eaeaea;
 
 .debug_dump {
   clear: both;
-  float: left;
+  float: $dir;
   width: 100%;
   margin-top: 45px;
   @include box_sizing;
   direction: ltr;
 }
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
+ }
