Added many feature to the schedule.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -166,3 +166,15 @@ $grayMediumLight: #eaeaea;
 #time_selector {
   margin:1em;
 }
+
+.radio, .checkbox {
+  padding-left: 0;
+  padding-right: 18px;
+}
+
+.radio input[type="radio"], .checkbox input[type="checkbox"] {
+  float: right;
+  margin-left: 0px;
+  margin-right: -18px;
+}
+
