--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -2,7 +2,7 @@
 <h1>Schedule</h1>
 <div class="row">
 	<div class="span6 offset3">
-		<%= semantic_form_for(@plan, url: url_for(action: 'create')) do |f| %>
+		<%= semantic_form_for(@plan, url: url_for(action: 'update')) do |f| %>
 			<%= render 'fields', f: f %>
 		<% end %>
 	</div>
