--- a/app/views/shared/_sensor.html.erb
+++ b/app/views/shared/_sensor.html.erb
@@ -1,4 +1,4 @@
 <li id="<%= sensor.id %>">
-	<span class="content">Sensor - <%= sensor.identifier %></span>
+	<span class="content"><%= link_to "Sensor - " + sensor.identifier, sensor %></span>
 	<span class="content">Port # <%= sensor.port_index %></span>
 </li>
