--- a/app/views/schedules/_fields.html.erb
+++ b/app/views/schedules/_fields.html.erb
@@ -1,52 +1,72 @@
 		<%= render 'shared/error_messages', object: f.object %>
 		
 		<%= f.input :title, label: t(:title) %>
-		<%= f.input :start_date, label: t(:start_time), :as => :string %>
+		<%= f.input :start_date, label: t(:start_time), :as => :string, :input_html => { :value => I18n.l(f.object.start_date) } %>
+		<%= f.input :end_date, :required => false, label: t(:end_time), :as => :string, :input_html => { :value => (I18n.l(f.object.end_date) if f.object.end_date)  } %>
 		
 		<%= javascript_tag do %>
 		function updateForm() {
+			var hasFaded = false;
 			val = $("#sprinkler_plan_repeat").val();
 			$("#sprinkler_plan_repeat option").each(function(value){
-				$("#"+this.value).hide();
+				if( $("#"+this.value).is(":visible") )
+				{
+					$("#"+this.value).fadeOut('normal',function() {
+						$("#" + val).fadeIn();
+					});
+					hasFaded = true;
+				}
 			});
-			$("#" + val).show();
+			if(!hasFaded)
+				$("#" + val).fadeIn();
 		}
 		$(document).ready(function() {
 			$("#sprinkler_plan_repeat").change(function() {
 				updateForm();
 			});
-			updateForm();
 			var weekly = <%= raw @plan.weekly.to_json %>;
 			for (dayIndex in weekly) {
 				$("#sprinkler_plan_weekly_" + weekly[dayIndex] ).prop("checked", true);
 			}
 			
+			var startDate = new Date(<%= raw (@plan.start_date || Time.now).to_json %>);
+			var currentDate = new Date();
+			currentDate.setDate(<%= raw @plan.day_of_month.to_json %>);
+			var beginDate = new Date();
+			beginDate.setDate(1);
+			var endDate = new Date();
+			endDate.setDate(31);
+			$.datepicker.regional[<%= raw I18n.locale.to_json %>];
+			$.timepicker.setDefaults($.timepicker.regional[<%= raw I18n.locale.to_json %>]);
+
+			$("#div_day_of_month").datepicker( {altField: "#sprinkler_plan_day_of_month", altFormat: "d", minDate:beginDate , maxDate: endDate, defaultDate: currentDate } );
 			
+			// create start time			
+			$("#sprinkler_plan_start_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
+			$("#sprinkler_plan_start_date").datepicker("setTime", startDate);
+			
+			// create end time
+			$("#sprinkler_plan_end_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
+
+			updateForm();	
 		});
 		<% end %>
-		<%= f.input(:repeat, as: :select, collection: {t(:daily) => "Daily", t(:weekly) => "Weekly", t(:monthly) => "Monthly"}, label: t(:repeat) )%>
+		<%= f.input(:repeat, :required => :true, :include_blank => false, as: :select, collection: {t(:no_repeat) => "Once", t(:daily_repeat) => "Daily", t(:weekly_repeat) => "Weekly", t(:monthly_repeat) => "Monthly"}, label: t(:repeat) )%>
+		<div id="Once"></div>
 		<div id="Daily"></div>
 		<div id="Weekly" style="display:none;">
 			<%=
 				day_names = I18n.t("date.day_names");
 				day_values = Date::ABBR_DAYNAMES;
 				week_days = Hash[day_names.zip(0..6)];
-				f.input :weekly, as: :check_boxes, collection: week_days, label: t(:weekly), :hidden_fields => false
+				f.input :weekly, as: :check_boxes, collection: week_days, label: t(:weekly_repeat), :hidden_fields => false
 			%>
 		</div>
 		<div id="Monthly" style="display:none;">
-			<%= fields_for :monthly do |d| %>
-				<%= d.label t(:monthly) %>
-				<%= d.hidden_field :day_of_month %>
-				<div id="div_day_of_month"></div>
-	
-				<%= javascript_tag do %>
-				var beginDate = new Date();
-				beginDate.setDate(1);
-				var endDate = new Date();
-				endDate.setDate(31);
-				$("#div_day_of_month").datepicker( {altField: "#monthly_day_of_month", altFormat: "d", minDate:beginDate , maxDate: endDate } );
-				<% end %>
-			<% end %>
+			<%= f.input :day_of_month, as: :hidden %>
+			<div id="div_day_of_month"></div>
 		</div>
-		<%= f.submit t(:send), class: "btn btn-large btn-primary" %>
+		<%= f.actions do %>
+		    <%= f.action :submit, label: true %>
+		    <%= f.action :cancel, :as => :link, label: :cancel %>
+		<% end %>
