--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Schdule') %>
-<h1>Schedule</h1>
+<% provide(:title, t(:new_plan)) %>
+<h1><%= t(:new_plan)%></h1>
 <div class="row">
 	<div class="span6 offset3">
 		<%= semantic_form_for(@plan, url: url_for(action: 'create')) do |f| %>
