--- a/app/views/sensors/new_reading.html.erb
+++ b/app/views/sensors/new_reading.html.erb
@@ -6,6 +6,9 @@
   <div class="span6 offset3">
     <%= semantic_form_for(@sensor_reading, url: url_for(action: 'create_reading')) do |f| %>
 	    <%= f.semantic_errors :state %>
+	    <%= hidden_field_tag(:human, :value => "1") %>
+
+
 	    <%= f.input :sensor_value, autofocus: true, label: t(:sensor_value) %>
 	    <%= f.input :read_time, label: t(:read_time), as: :string %>
 	
