Refactored forms. Added enums for PlanType and SensorType. Added valves and alarms. Added deletes for admins. What else?

--- a/app/views/schedules/_fields.html.erb
+++ b/app/views/schedules/_fields.html.erb
@@ -1,9 +1,18 @@
-		<%= render 'shared/error_messages', object: f.object %>
+		<%= f.semantic_errors :state %>
 		
 		<%= f.input :title, label: t(:title) %>
-		<%= f.input :start_date, label: t(:start_time), :as => :string, :input_html => { :value => I18n.l(f.object.start_date) } %>
-		<%= f.input :end_date, :required => false, label: t(:end_time), :as => :string, :input_html => { :value => (I18n.l(f.object.end_date) if f.object.end_date)  } %>
+		<%=
+			start_date = f.object.start_date || Time.now
+			f.input :start_date, label: t(:start_time), :as => :string, :input_html => { :value => I18n.l(start_date) }
+		%>
 		
+		<%= f.input :end_date,
+			:required => false,
+			:as => :string,
+			:label => t(:end_time).html_safe + link_to_function(" ("+t(:clear).html_safe + ")", '$("#sprinkler_plan_end_date").val("");'),
+			:input_html => { :value => (I18n.l(f.object.end_date) if f.object.end_date)  }
+		%>
+
 		<%= javascript_tag do %>
 		function updateForm() {
 			var hasFaded = false;
@@ -48,9 +57,17 @@
 			// create end time
 			$("#sprinkler_plan_end_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
 
-			updateForm();	
+			updateForm();
+			
+			$("input:reset").click(function() {
+				this.form.reset();
+				updateForm();      
+				return false;	// prevent reset button from resetting again
+			});
+
 		});
 		<% end %>
+		<%= f.input :plan_type, as: :enum_select %>
 		<%= f.input(:repeat, :required => :true, :include_blank => false, as: :select, collection: {t(:no_repeat) => "Once", t(:daily_repeat) => "Daily", t(:weekly_repeat) => "Weekly", t(:monthly_repeat) => "Monthly"}, label: t(:repeat) )%>
 		<div id="Once"></div>
 		<div id="Daily"></div>
@@ -66,7 +83,16 @@
 			<%= f.input :day_of_month, as: :hidden %>
 			<div id="div_day_of_month"></div>
 		</div>
+		
 		<%= f.actions do %>
 		    <%= f.action :submit, label: true %>
 		    <%= f.action :cancel, :as => :link, label: :cancel %>
+		    <%= f.action :reset %>
+		    <% if !f.object.new_record? %>
+		    <%= link_to t(:delete_plan),
+				sprinkler_schedule_path(f.object.sprinkler_id, f.object.id),
+				method: :delete,
+				data: { confirm: t(:you_sure?) },
+				class: "action link_action btn" %>
+	    	<% end %>
 		<% end %>
