--- a/app/views/sensors/_sensor.html.erb
+++ b/app/views/sensors/_sensor.html.erb
@@ -1,16 +1,11 @@
 <h3><%= link_to t(:identifier)+" : "+sensor.identifier, [sensor.sprinkler, sensor] %></h3>
 <p><%= t(:port) %> : <%= sensor.port_index %></p>
-<%
-	# Read last sensor readings.
-	events_time = 3.days.ago	
-	if not sensor.sensor_readings.count(:conditions => ["read_time >= ?", events_time]).zero?
-%>
+<%	if sensor.last_readings.any? %>
 	<h4><%= t(:last_readings)%> :</h4>
 	<table class="table table-condensed ReadingTable">
 		<tr><th><%= t :reading_time %></th><th><%= t :reading %></th></tr>
 		<%
-			readings = sensor.sensor_readings.all(limit:5, :conditions => ["read_time >= ?", events_time])
-			readings.each do |reading|
+			sensor.last_readings.each do |reading|
 		%>
 			
 		<tr><td><%= l reading.read_time, format: :short %></td><td><%= reading.sensor_value %></td></tr>
