--- a/app/views/shared/_sprinkler.html.erb
+++ b/app/views/shared/_sprinkler.html.erb
@@ -10,7 +10,7 @@
 	<% if sprinkler.valves.any? %>
 	<h4><%= t(:valves) %></h4>
 	<ul>
-		<%= render partial: 'shared/sensor', collection: sprinkler.valves %>
+		<%= render partial: 'shared/valf', collection: sprinkler.valves %>
 	</ul>
 	<% end %>
 </li>
