--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 
 <% end %>
 
-<% if current_user.admin? && !current_user?(user) %>
-| <%= link_to "delete", user, method: :delete,
-data: { confirm: "You sure?" } %>
+<% if current_user.admin? && !current_user?(@user) %>
+| <%= link_to t(:delete), @user, method: :delete,
+data: { confirm: t(:you_sure?) } %>
 <% end %>
