--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,7 @@
 
 <div class="row">
 	<div class="span6 offset3">
-		<%= form_for(@user) do |f| %>
+		<%= semantic_form_for(@user) do |f| %>
 		<%= render 'fields', f: f %>
-		<%= f.submit t(:save_changes), class: "btn btn-large btn-primary" %>
-		<% end %>
 	</div>
 </div>
