--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,9 +3,8 @@
 
 <div class="row">
 	<div class="span6 offset3">
-		<%= form_for(@user) do |f| %>
-		<%= render 'fields', f: f %>
-		<%= f.submit t(:create_user), class: "btn btn-large btn-primary" %>
+		<%= semantic_form_for(@user) do |f| %>
+		<%= render 'fields', f: f %>		
 		<% end %>
 	</div>
 </div>
