--- a/app/views/alarms/edit.html.erb
+++ b/app/views/alarms/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Alarms#edit</h1>
-<p>Find me in app/views/alarms/edit.html.erb</p>
+<% provide(:title, t(:edit_alarm)) %>
+<h1><%= t(:edit_alarm)%></h1>
+<div class="row">
+	<div class="span6 offset3">
+		<%= semantic_form_for(@alarm, url: url_for(action: 'update')) do |f| %>
+			<%= render 'fields', f: f %>
+		<% end %>
+	</div>
+</div>
