--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,3 +177,19 @@ $grayMediumLight: #eaeaea;
   margin-left: 0px;
   margin-right: -18px;
 }
+
+.alarms {
+  list-style: none;
+  margin: 0;
+  li {
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+      margin-bottom: 5px;
+    .description {
+      vertical-align:top;
+      padding-left:1em;
+    }
+  }
+  }
+}
