--- a/app/views/sprinklers/show.html.erb
+++ b/app/views/sprinklers/show.html.erb
@@ -1,4 +1,17 @@
-<h1><%= t(:sprinkler) + " " + @sprinkler.id.to_s.html_safe %></h1>
+<h1>
+	<%= t(:sprinkler) + " " + @sprinkler.id.to_s.html_safe %>
+</h1>
+
+<div class="class="btn-toolbar" style="padding-left:6em;">
+	<div class="btn-group">
+	  <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><%= t(:edit) %> <span class="caret"></span></button>
+	  <ul class="dropdown-menu">
+	    <li><%= link_to t(:new_valf), new_sprinkler_valf_path(@sprinkler) %></li>
+	    <li><%= link_to t(:new_sensor), new_sprinkler_sensor_path(@sprinkler) %></li>
+	    <li><%= link_to t(:new_plan), new_sprinkler_schedule_path(@sprinkler) %></li>
+	  </ul>
+	</div>
+</div>	
 
 <% if @sprinkler.sensors.any? %>
 <h3><%= t(:sensors) %></h3>
