--- a/app/views/sprinklers/new.html.erb
+++ b/app/views/sprinklers/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Sprinklers#new</h1>
-<p>Find me in app/views/sprinklers/new.html.erb</p>
+<% provide(:title, t(:new_sprinkler)) %>
+<h1><%= t(:new_sprinkler)%></h1>
+<div class="row">
+	<div class="span6 offset3">
+		<%= semantic_form_for(@sprinkler, url: url_for(action: 'create')) do |f| %>
+			<%= render 'fields', f: f %>
+		<% end %>
+	</div>
+</div>
