--- a/app/views/valves/_fields.html.erb
+++ b/app/views/valves/_fields.html.erb
@@ -2,6 +2,7 @@
 
 <%= f.input :identifier %>
 <%= f.input :port_index, as: :number %>
+<%= f.input :irrigation_mode, as: :enum_select %>
 
 <%= f.actions do %>
 	<%= f.action :submit, label: true %>
