--- a/app/views/schedules/_fields.html.haml
+++ b/app/views/schedules/_fields.html.haml
@@ -11,25 +11,25 @@
 :javascript
   function updateForm() {
   	var hasFaded = false;
-  	val = $("\#sprinkler_plan_repeat").val();
-    $("\#sprinkler_plan_repeat option").each(function(value){
-      if( $("\#"+this.value).is(":visible") ) {
-        $("\#"+this.value).fadeOut('normal',function() {
-          $("\#" + val).fadeIn();
+  	val = $("#sprinkler_plan_repeat").val();
+    $("#sprinkler_plan_repeat option").each(function(value){
+      if( $("#"+this.value).is(":visible") ) {
+        $("#"+this.value).fadeOut('normal',function() {
+          $("#" + val).fadeIn();
         });
         hasFaded = true;
       }
     });
     if(!hasFaded)
-      $("\#" + val).fadeIn();
+      $("#" + val).fadeIn();
   }
   $(document).ready(function() {
-    $("\#sprinkler_plan_repeat").change(function() {
+    $("#sprinkler_plan_repeat").change(function() {
       updateForm();
     });
     var weekly = #{raw @plan.weekly.to_json};
     for (dayIndex in weekly) {
-      $("\#sprinkler_plan_weekly_" + weekly[dayIndex] ).prop("checked", true);
+      $("#sprinkler_plan_weekly_" + weekly[dayIndex] ).prop("checked", true);
     }
     var startDate = new Date(#{raw (@plan.start_date || Time.now).to_json });
     var currentDate = new Date();
@@ -41,14 +41,14 @@
     $.datepicker.regional[#{ raw I18n.locale.to_json }];
     $.timepicker.setDefaults($.timepicker.regional[#{ raw I18n.locale.to_json }]);
     
-    $("\#div_day_of_month").datepicker( {altField: "\#sprinkler_plan_day_of_month", altFormat: "d", minDate:beginDate , maxDate: endDate, defaultDate: currentDate } );
+    $("#div_day_of_month").datepicker( {altField: "#sprinkler_plan_day_of_month", altFormat: "d", minDate:beginDate , maxDate: endDate, defaultDate: currentDate } );
     
     // create start time			
-    $("\#sprinkler_plan_start_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
-    $("\#sprinkler_plan_start_date").datepicker("setTime", startDate);
+    $("#sprinkler_plan_start_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
+    $("#sprinkler_plan_start_date").datepicker("setTime", startDate);
     
     // create end time
-    $("\#sprinkler_plan_end_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
+    $("#sprinkler_plan_end_date").datetimepicker({dateFormat: 'dd/mm/yy', defaultDate: currentDate});
     
     updateForm();
     
