--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  *
  *= require formtastic-bootstrap
  *= require_self
- *= require_tree .
+ *= require_directory .
  *= require jquery.ui.datepicker
  *= require jquery.ui.slider
  */
