--- a/app/views/alarms/_fields.html.haml
+++ b/app/views/alarms/_fields.html.haml
@@ -1,5 +1,5 @@
 = f.semantic_errors :state
-= f.input :alarm_title
+= f.input :alarm_title, :placeholder=>true
 = f.input :condition_type, as: :enum_select
 = f.input :alarm_value, as: :number
 = f.actions do
