--- a/app/views/sensors/new_reading.html.haml
+++ b/app/views/sensors/new_reading.html.haml
@@ -1,5 +1,7 @@
 -# Just a debug, will be removed when we'll have a proper machines.
 - provide(:title, t(:new_reading) )
+- content_for(:head, stylesheet_link_tag("helpers/timepicker.css"))
+- content_for(:head, javascript_include_tag("helpers/timepicker.js"))
 %h1= t(:new_reading)
 
 %div.row
@@ -14,4 +16,4 @@
         = f.action :cancel, :as => :link, label: :cancel
         	
     :javascript
-      $('\#sensor_reading_read_time').datetimepicker({ dateFormat: 'dd/mm/yy'});
+      $('#sensor_reading_read_time').datetimepicker({ dateFormat: 'dd/mm/yy'});
