--- a/app/views/valves/show.html.haml
+++ b/app/views/valves/show.html.haml
@@ -14,5 +14,5 @@
         method: :delete, data: { confirm: t(:you_sure?) }, title: @valf.identifier
 
 %p= @valf.port_index
-%p= @valf.irrigation_mode.text unless @valf.irrigation_mode
+%p= @valf.irrigation_mode.text unless @valf.irrigation_mode.blank?
 
