Added sensors index, added alarms index

--- a/app/views/sprinklers/show.json.erb
+++ b/app/views/sprinklers/show.json.erb
@@ -1,4 +1,4 @@
 <%=
-	timings = @sprinkler.timing(Time.now + 30.days, Time.now)
+	timings = @sprinkler.timing(Time.now + 30.days, Time.now)[0..1000]
 	render partial: "sprinkler_plans/sprinkler_timing", object: timings
 %>
