--- a/app/views/shared/_valf.html.haml
+++ b/app/views/shared/_valf.html.haml
@@ -1,7 +1,6 @@
 %li{:id => valf.id}
   %span.content
-    -valf_description = "#{t(:port)} - #{valf.port_index.to_s}".html_safe
-    =link_to valf_description, sprinkler_valf_path(valf.sprinkler_id, valf.id)
+    =link_to valf.to_s, sprinkler_valf_path(valf.sprinkler_id, valf.id)
     
   -if current_user.admin?
     %span.content
