--- a/app/views/valves/index.html.haml
+++ b/app/views/valves/index.html.haml
@@ -1,12 +1,13 @@
 -provide(:title, t(:valves))
 %h1= t(:valves)
-%div.row
-  %div.span6.offset3
-    %table.table.table-condensed.ReadingTable
-      %tr
-        -@valves.each do |valf|
+- if @valves.any?
+  %table.table.table-condensed.ReadingTable
+    %tr
+      %th= t(:identifier)
+      %th= t(:port)
+      %th= t(:type)
+      - @valves.each do |valf|
+        %tr
           %td= link_to valf.port_index, sprinkler_valf_path(valf.sprinkler_id, valf.id) 
-      %tr
-        -@valves.each do |valf|
-          %td= valf.valf_type.short
-  		
+          %td= valf.port_index
+          %td= valf.valf_type.text
