When editing user, password can be left blank.

--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -2,6 +2,7 @@
 
 = f.input :name
 = f.input :email, as: :email
+= f.input :phone, as: :phone
 = f.input :password, as: :password, label: t(:password)
 = f.input :password_confirmation, as: :password
 
