--- a/app/views/sprinklers/show.html.haml
+++ b/app/views/sprinklers/show.html.haml
@@ -1,14 +1,10 @@
 %h1= t(:sprinkler) + " " + @sprinkler.id.to_s.html_safe
 
-%div.btn-toolbar.entry{:style => "padding-left:6em;"}
-  %div.btn-group
-    %button.btn.btn-primary.dropdown-toggle.entry{"data-toggle" => "dropdown"}
-      =t(:edit)
-      %span#caret
-    %ul.dropdown-menu
-      %li= link_to t(:new_valf), new_sprinkler_valf_path(@sprinkler)
-      %li= link_to t(:new_sensor), new_sprinkler_sensor_path(@sprinkler)
-      %li= link_to t(:new_plan), new_sprinkler_schedule_path(@sprinkler)
+= show_menu t(:edit),
+  link_to(t(:edit_sprinkler), edit_sprinkler_path(@sprinkler)),
+  link_to(t(:new_valf), new_sprinkler_valf_path(@sprinkler)),
+  link_to(t(:new_sensor), new_sprinkler_sensor_path(@sprinkler)),
+  link_to(t(:new_plan), new_sprinkler_schedule_path(@sprinkler))
 
 = render partial: "sprinkler_logs", object: @sprinkler.last_logs
 
