--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%header.navbar.navbar-fixed-top
+%header.navbar.navbar-inverse.navbar-fixed-top
   %div.navbar-inner
     %div.container
       = link_to t(:watering_project), root_path, id: "logo"
